--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "google-auth-library": "^9.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.11.15"
   }
 }
